# rpi-webrtc-streamer

./: .dockerignore  .gitattributes  .gitignore  BUILD_ubuntu.md  CONFIGURE_rws.md  Dockerfile  Dockerfile.build  LICENSE.md  README.md  README_TelegramBot.md  README_audio.md  README_building.md  README_motion.md  README_rws_setup.md
LICENSE/: LICENSE.rpi-webrtc-streamer
etc/: app_channel.conf.template  media_config.conf.template  motion_config.conf.template  webrtc-streamer.conf.template  webrtc_streamer.conf.template
etc/template/: media_config.conf  motion_config.conf  telegramBot.conf  webrtc_streamer.conf
lib/h264bitstream/: Makefile  aclocal.m4  config.status  configure  libh264bitstream-uninstalled.pc  libh264bitstream-uninstalled.sh  libh264bitstream.pc  libh264bitstream.pc.in  libtool
lib/h264bitstream/.deps/: h264_analyze.Po  h264_avcc.Plo  h264_sei.Plo  h264_stream.Plo
misc/: .clang-format  AndroidApp_ClinetCerts.patch  AppRTCMobile.apk  WEBRTC_BRANCH.conf  args.gn  cross_gn.mk  cross_gyp.mk  libwebsocket_cross.mk  motion_detection_example.avi  native-to-browser-test.html  nginx-ssl-client-authenticate-example  nginx-ssl-config-example  webrtc_android_build_args.gn  webrtc_arm_build_args.gn  webrtc_armv6_build_args.gn  webrtc_build_args.gn  webrtc_x64_build_args.gn
mk/: config_h264bitstream.sh  config_libwebsockets.sh  cross_arm_build.mk  cross_mmal.mk  h264bitstream_arm_build.mk  libavahi_arm.mk  libwebsocket_arm_build.mk  libwebsocket_native_gcc.mk  native_gcc.mk  validate_variables.mk  webrtc_library_gn.py
scripts/: config_h264bitstream.sh  config_libwebsockets.sh  rpi-webrtc-streamer  rpi-webrtc-streamer.sh  rws.service  sysroot-pkg-config-link.sh  webrtc-gyp-env.sh  webrtc-streamer.sh  webrtc_library_gn.py  webrtc_library_gyp.py
src/: Makefile  RaspiCLI.h  RaspiCamControl.h  RaspiPreview.h  app_channel.cc  app_channel.h  app_client.cc  app_client.h  app_clientinfo.cc  app_clientinfo.h  app_ws_client.cc  app_ws_client.h  clientconstraints.h  common_types.cc  common_types.h  config_defines.h  config_defs.h  config_media.cc  config_media.h  config_motion.cc  config_motion.h  config_streamer.cc  config_streamer.h  default_config.cc  default_config.h  direct_socket.cc  direct_socket.h  dummyvideocapturer.h  fakevideocapturer_notaskqueue.cc  file_log_sink.cc  file_log_sink.h  file_logger.cc  file_logger.h  file_writer_handle.cc  file_writer_handle.h  frame_queue.cc  frame_queue.h  h264bitstream_parser.cc  h264bitstream_parser.h  log_rotating_stream.cc  (+86 more)
src/compat/: directory_iterator.cc  directory_iterator.h  file.cc  file.h  file_posix.cc  filestream.cc  filestream.h  optionsfile.cc  optionsfile.h  platform_file.cc
src/def/: config_media.def  config_motion.def  config_streamer.def
src/h264bitstream/: Makefile.am  Makefile.in  configure  configure.ac
tools/: telegramBot.py
web-root/bitrate/: index.html
web-root/bitrate/css/: main.css
web-root/bitrate/js/: codec_order.js  main_rws.js
web-root/native-peerconnection/: Makefile  index.html
web-root/native-peerconnection/js/: main_rws.js  main_web.js  peerconnection_client.js  sdputils.js  websocket_signaling.js
web-root/np2/: index.html
web-root/np2/css/: main.css
web-root/np2/js/: config_media.mjs  config_params.mjs  constants.mjs  peerconnection_client.mjs  snackbar.mjs  streamer_connection_rws.mjs  streamer_controller.mjs  streamer_transaction.mjs  websocket_channel.mjs
