# Build arguments go here. Examples:
#   is_component_build = true
#   is_debug = false
# See "gn args <out_dir> --list" for available build arguments.
target_os = "android"
target_cpu = "arm"

rtc_include_tests=false
enable_nocompile_tests=true
libyuv_include_tests=false
enable_iterator_debugging=false

