# Build arguments go here. Examples:
#   is_component_build = true
#   is_debug = false
# See "gn args <out_dir> --list" for available build arguments.

is_component_build=false
is_official_build=true
#is_debug=true
enable_iterator_debugging=false

host_toolchain="//build/toolchain/linux:arm"
is_clang=false
use_sysroot=true
target_sysroot="/opt/rpi_rootfs"
system_libdir="/opt/rpi_rootfs/usr/lib/arm-linux-gnueabihf"
gold_path = "/opt/rpi_rootfs/tools/arm-linux-gnueabihf/bin"

# target CPU optimization for PI2
target_os="linux"
target_cpu="arm"
arm_arch="armv7-a"
arm_fpu="neon"
arm_float_abi="hard"
arm_use_neon=true
arm_tune="cortex-a7"

# SSL related config
#rtc_build_ssl=true   # disable rtc ssl package, and force to compile OpenSSL
#rtc_ssl_root="/opt/rpi_rootfs/usr/include/openssl"

#
# Setting for removing component for desktop related stuffs
use_ozone=true
is_desktop_linux=false

#
# Uncomment this when you want to use internal libcxx of 
# WebRTC native package (default is true)
#use_custom_libcxx=false    
is_chrome_branded=true
rtc_build_with_neon=true
enable_nacl=false
rtc_use_h264=true
use_openh264=true
rtc_initialize_ffmpeg=false
rtc_include_tests=false
rtc_include_pulse_audio=false
rtc_enable_protobuf=false
treat_warnings_as_errors=false

