# Build arguments go here. Examples:
#   is_component_build = true
#   is_debug = false
# See "gn args <out_dir> --list" for available build arguments.

#  
#
# The following two flags are used for debugging.
#
#is_official_build=false
#is_debug=true

# For package building,  we need to chage is_official_build to true and is_debug to false. 
#
is_official_build=true
is_debug=false

is_component_build=false
enable_iterator_debugging=false

host_toolchain="//build/toolchain/linux:arm"
is_clang=false
use_sysroot=true
target_sysroot="/opt/rpi_rootfs/rootfs"
gold_path = "/opt/rpi_rootfs/tools/arm-linux-gnueabihf/bin"

# target CPU optimization for PI2
target_os="linux"
target_cpu="arm"
arm_arch="armv7-a"
arm_fpu="neon"
arm_float_abi="hard"
arm_use_neon=true
arm_tune="cortex-a7"
rtc_build_with_neon=true

#
# build option for third party package of WebRTC native code
rtc_use_pipewire=false
libyuv_disable_jpeg=true
use_system_libjpeg=true
# disabled
libcxx_natvis_include=false
libyuv_include_tests=false
rtc_enable_protobuf=false

#
# codec config options
rtc_use_h264=true
rtc_include_pulse_audio=false
# do not use libaom(AV1 codec)
enable_libaom=false

#
# WebRTC native package code build options which related to 
# target system envirionment
# 
rtc_use_x11=false
rtc_use_gtk=false
use_ozone=true
use_aura=false
use_partition_alloc=false
use_allocator_shim=false
use_custom_libcxx=false    
is_chrome_branded=true
rtc_include_tests=false
treat_warnings_as_errors=false

