# Build arguments go here. Examples:
#   is_component_build = true
#   is_debug = false
# See "gn args <out_dir> --list" for available build arguments.

is_component_build=false
#is_official_build=true
#is_debug=false # Relese Version

host_toolchain="//build/toolchain/linux:x64"
target_os="linux"
is_clang=false
use_sysroot=false

# SSL related config
#rtc_build_ssl=true   # disable rtc ssl package, and force to compile OpenSSL
#rtc_ssl_root="/home/kclyu/Workspace/rpi_rootfs/usr/include/openssl"



#
#
use_ozone=true
is_desktop_linux=false

#
#
is_chrome_branded=true
enable_nacl=false
#enable_pdf=false
#enable_webvr=false
rtc_use_h264=true
use_openh264=true
rtc_initialize_ffmpeg=false
rtc_include_tests=false
rtc_include_pulse_audio=false
rtc_enable_protobuf=false
treat_warnings_as_errors=false

